changed LinkedList to ArrayList