@@ -110,33 +110,33 @@ public class Pawn extends Figures {
 		}
 		
 		// en passant for white
-		else if(this.color=="w"&&pos2==3&&y==2&&x==pos1+1&&board.movedList.getLast().getFigure().getType()==4 &&  
-				board.movedList.getLast().getFigure()==board.getField(pos1+1, pos2) &&    
-				board.movedList.getLast().getTo2()-board.movedList.getLast().getFrom2()  ==2) {
-				board.setNull(board.movedList.getLast().getTo1(),board.movedList.getLast().getTo2());
+		else if(this.color=="w"&&pos2==3&&y==2&&x==pos1+1&&board.movedList.get(board.movedList.size()-1).getFigure().getType()==4 &&  
+				board.movedList.get(board.movedList.size()-1).getFigure()==board.getField(pos1+1, pos2) &&    
+				board.movedList.get(board.movedList.size()-1).getTo2()-board.movedList.get(board.movedList.size()-1).getFrom2()  ==2) {
+				board.setNull(board.movedList.get(board.movedList.size()-1).getTo1(),board.movedList.get(board.movedList.size()-1).getTo2());
 				return true; 
 				}
 			
 		// en passant for white
-		else if(this.color=="w"&&pos2==3&&y==2&&x==pos1-1&&board.movedList.getLast().getFigure().getType()==4 &&  
-				board.movedList.getLast().getFigure()==board.getField(pos1-1, pos2) &&    
-				board.movedList.getLast().getTo2()-board.movedList.getLast().getFrom2()  ==2) {
-				board.setNull(board.movedList.getLast().getTo1(),board.movedList.getLast().getTo2());
+		else if(this.color=="w"&&pos2==3&&y==2&&x==pos1-1&&board.movedList.get(board.movedList.size()-1).getFigure().getType()==4 &&  
+				board.movedList.get(board.movedList.size()-1).getFigure()==board.getField(pos1-1, pos2) &&    
+				board.movedList.get(board.movedList.size()-1).getTo2()-board.movedList.get(board.movedList.size()-1).getFrom2()  ==2) {
+				board.setNull(board.movedList.get(board.movedList.size()-1).getTo1(),board.movedList.get(board.movedList.size()-1).getTo2());
 				return true; 
 				}
 		// en passant for black
-		else if(this.color=="b"&&pos2==4&&y==5&&x==pos1-1&&board.movedList.getLast().getFigure().getType()==4 &&  
-				board.movedList.getLast().getFigure()==board.getField(pos1-1, pos2) &&    
-				board.movedList.getLast().getTo2()-board.movedList.getLast().getFrom2()  ==-2) {
-				board.setNull(board.movedList.getLast().getTo1(),board.movedList.getLast().getTo2());
+		else if(this.color=="b"&&pos2==4&&y==5&&x==pos1-1&&board.movedList.get(board.movedList.size()-1).getFigure().getType()==4 &&  
+				board.movedList.get(board.movedList.size()-1).getFigure()==board.getField(pos1-1, pos2) &&    
+				board.movedList.get(board.movedList.size()-1).getTo2()-board.movedList.get(board.movedList.size()-1).getFrom2()  ==-2) {
+				board.setNull(board.movedList.get(board.movedList.size()-1).getTo1(),board.movedList.get(board.movedList.size()-1).getTo2());
 				return true; 
 				}
 			
 		// en passant for black
-		else if(this.color=="b"&&pos2==4&&y==5&&x==pos1+1&&board.movedList.getLast().getFigure().getType()==4 &&  
-				board.movedList.getLast().getFigure()==board.getField(pos1+1, pos2) &&    
-				board.movedList.getLast().getTo2()-board.movedList.getLast().getFrom2()  ==-2) {
-				board.setNull(board.movedList.getLast().getTo1(),board.movedList.getLast().getTo2());
+		else if(this.color=="b"&&pos2==4&&y==5&&x==pos1+1&&board.movedList.get(board.movedList.size()-1).getFigure().getType()==4 &&  
+				board.movedList.get(board.movedList.size()-1).getFigure()==board.getField(pos1+1, pos2) &&    
+				board.movedList.get(board.movedList.size()-1).getTo2()-board.movedList.get(board.movedList.size()-1).getFrom2()  ==-2) {
+				board.setNull(board.movedList.get(board.movedList.size()-1).getTo1(),board.movedList.get(board.movedList.size()-1).getTo2());
 				return true; 
 				}
 		
